--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+*.pyc
 
 # Installer logs
 pip-log.txt
@@ -52,3 +53,8 @@ coverage.xml
 # Sphinx documentation
 docs/_build/
 
+# Vagrant configuration
+.vagrant/
+
+# Gedit backups
+*.*~
