--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,16 @@
 Django==1.6.5
 Jinja2==2.7.3
 MarkupSafe==0.23
+Pillow==2.5.1
+PyYAML==3.11
 Pygments==1.6
 Sphinx==1.2.2
+argparse==1.2.1
 django-phonenumber-field==0.6
 docutils==0.12
+mock==1.0.1
 pep8==1.5.7
 phonenumbers==6.2.0
 psycopg2==2.5.3
 requests==2.3.0
 wsgiref==0.1.2
-PyYAML==3.11
-Pillow==2.5.1
