--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ addons:
   postgresql: "9.3"
 before_script:
   - psql -c 'create database test_whats_fresh;' -U postgres
-  - psql -U postgres -c "create extension postgis"
+  - psql -U postgres -c "create extension postgis;" test_whats_fresh
 
