--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -6,6 +6,7 @@ provisioner:
   name: chef_zero
   encrypted_data_bag_secret_key_path: chef/encrypted_data_bag_secret
   data_bags_path: chef/data_bags
+  require_chef_omnibus: 11.8.0
   attributes:
     postgresql:
       version: "9.3"
